# infraconf

./: Cargo.toml  flake.nix
src/: cli.rs  main.rs
src/cli/: test.rs
